--- a/src/app/components/Layouts/Header/Header.module.css
+++ b/src/app/components/Layouts/Header/Header.module.css
@@ -5,6 +5,11 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
     padding: 24px 80px
 
 }
