--- a/src/app/components/Slider/TrendingSlider.module.css
+++ b/src/app/components/Slider/TrendingSlider.module.css
@@ -1,30 +1,69 @@
-.slider_container {
-
-    width: 100%;
-    position: absolute;
-}
-.image_container {
-    z-index: 0;
-    top: 0;
-    position: absolute;
-}
-.side_button {
-    height: 150px;
+/* TrendingSlider.module.css */
+.slider {
     position: relative;
-    z-index: 2;
+}
+
+.slideContainer {
+    background-color: #0D6DB5;
     display: flex;
-    align-items: center;
-    width: 80px;
-    background: rgb(44, 43, 43, 0.4);
+    overflow: hidden;
+    align-items: flex-start; /* Align items at the start of the flex container */
 }
-.side_button:first-child {
-    top: 0;
-    left: 0;
+
+.slide {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
-.side_button:last-child {
-    bottom: 0;
-    right: -200px;
+
+.activeSlide {
+    opacity: 1;
 }
-.side_button:hover {
-    background: rgba(44, 43, 43, 0.2);
+
+.imageContainer {
+    margin: 1em auto;
+    position: relative;
+    width: 320px;
+    height: 320px;
+    overflow: hidden;
+    clip-path: circle(50% at 50% 50%);
+}
+.textContainer {
+    width:1024px;
+    padding: 84px;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+
+.textContainer p {
+    margin: 0;
+    text-align: center;
+}
+
+
+.prevButton,
+.nextButton {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px;
+    background-color: #ccc;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.prevButton {
+    left: 10px;
+}
+
+.nextButton {
+    right: 10px;
 }
