--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,3 +8,51 @@
     gap: 32px;
     justify-content: center;
 }
+
+.main_image {
+    position: relative;
+    background-image:url("../static/images/main.png");
+    background-size: cover;
+    width: 1920px;
+    height: 703px;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:#00000080;
+}
+.image_text {
+    position: absolute;
+    color: white;
+    z-index: 1;
+    width: 808px;
+    height: 113px;
+    top: 231px;
+    left: 80px;
+    font-size: 96px;
+    font-weight: 500;
+    line-height: 113px;
+    letter-spacing: 0em;
+    text-align: left;
+
+
+}
+
+.image_subtext {
+    position: absolute; /* Position the text absolutely */
+    color: white;
+    font-size: 32px;
+    z-index: 3;
+    width: 895px;
+    height: 114px;
+    top: 355px;
+    left: 80px;
+    font-weight: 500;
+    line-height: 38px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
