--- a/src/app/components/Layouts/Header/Header.module.css
+++ b/src/app/components/Layouts/Header/Header.module.css
@@ -1,40 +1,29 @@
 .header_container {
-    background: white;
-    color: black;
+    background-color: rgba(255, 255, 255, 0.95);
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    position: fixed;
+    position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
     z-index: 999;
-    padding: 24px 80px
-
-}
-.header_nav ul {
-    display: flex;
-    flex-direction: row;
-    gap: 32px;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+    padding: 16px 80px
 }
 
-.header_nav ul li:last-child{
-
+.header_navigation :not(:last-child) {
+    margin-right: 20px;
 }
 
-.logo {
-    background-image: url('../../../../static/images/logo.svg');
-    width: 80px;
-    height: 56px;
-    background-repeat: no-repeat;
-    background-size: 55px;
+.header_navigation :last-child {
+    color: #68B437;
 }
 
-.login {
-    margin-left: auto;
-    list-style-type: none;
+.navigation_link {
+    text-decoration: none;
+    color: black;
+    font-size: 1rem;
+}
+
+.navigation_link:hover {
+    text-decoration: underline;
 }
