--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,21 +9,34 @@
     justify-content: center;
 }
 
-.main_image {
-    position: relative;
-    background-image:url("../static/images/main.png");
-    background-size: cover;
-    width: 1920px;
-    height: 703px;
-}
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
+.preview_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    padding: 16px 80px;
     width: 100%;
-    height: 100%;
-    background-color:#00000080;
+    height: 500px;
+
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("/images/preview.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+.preview_section__title {
+    font-size: 4.25rem;
+    font-weight: 500;
+    color: white;
+    width: 574px;
+}
+
+.preview_section__description {
+    font-size: 1.25rem;
+    color: white;
+    width: 574px;
+}
+
 .image_text {
     position: absolute;
     color: white;
@@ -42,7 +55,8 @@
 }
 
 .image_subtext {
-    position: absolute; /* Position the text absolutely */
+    position: absolute;
+    /* Position the text absolutely */
     color: white;
     font-size: 32px;
     z-index: 3;
