--- a/src/app/components/Slider/TrendingSlider.module.css
+++ b/src/app/components/Slider/TrendingSlider.module.css
@@ -1,69 +1,17 @@
-/* TrendingSlider.module.css */
-.slider {
-    position: relative;
-}
-
-.slideContainer {
-    background-color: #0D6DB5;
+.slider_item {
     display: flex;
-    overflow: hidden;
-    align-items: flex-start; /* Align items at the start of the flex container */
+    align-items: center;
+    padding: 40px 0;
+    width: 1140px;
+    margin: 0 auto;
 }
 
-.slide {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+.hexagon_overlay {
+    margin-right: 48px;
 }
 
-.activeSlide {
-    opacity: 1;
-}
-
-.imageContainer {
-    margin: 1em auto;
-    position: relative;
-    width: 320px;
-    height: 320px;
-    overflow: hidden;
-    clip-path: circle(50% at 50% 50%);
-}
-.textContainer {
-    width:1024px;
-    padding: 84px;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 28px;
-    letter-spacing: 0em;
-    text-align: left;
-
-}
-
-.textContainer p {
-    margin: 0;
-    text-align: center;
-}
-
-
-.prevButton,
-.nextButton {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 10px;
-    background-color: #ccc;
-    border: none;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.prevButton {
-    left: 10px;
-}
-
-.nextButton {
-    right: 10px;
+.slider_item__description {
+    font-size: 1.125rem;
+    color: white;
+    font-weight: 400;
 }
