--- a/src/app/components/ActualCard/ActualCard.module.css
+++ b/src/app/components/ActualCard/ActualCard.module.css
@@ -1,27 +1,27 @@
-.card {
+.card_container {
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 8px 0px #00000080;
-    border-radius: 16px;
-    padding: 16px;
-    gap: 26px;
+    justify-content: space-between;
+    box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+    padding: 12px;
+    min-width: 280px;
 }
 
-.card:first-child {
-    gap: 12px;
+.image_container {
+    position: relative;
+    width: 256px;
+    height: 256px;
 }
 
-.title {
+.image_container img {
+    border-radius: 12px;
+}
+
+.card_title {
     color: #444444;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 500;
-    line-height: 28px;
-    letter-spacing: 0em;
+    padding: 12px 0;
     text-align: center;
-    max-width: 340px;
-
-}
-
-.image {
-
 }
