--- a/src/app/components/UI/Buttons/SecondaryButton/SecondaryButton.module.css
+++ b/src/app/components/UI/Buttons/SecondaryButton/SecondaryButton.module.css
@@ -1,11 +1,20 @@
 .button {
-    background: #0D6DB5;
-    padding: 16px 20px 16px 20px;
+    display: block;
+    background-color: #0D6DB5;
     border-radius: 8px;
-    color: white;
-    font-size: 24px;
+    padding: 12px 16px;
+    line-height: 20px;
+    font-size: 1rem;
     font-weight: 500;
-    line-height: 28px;
-    letter-spacing: 0em;
-    text-align: center;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #2487d3;
+}
+
+.button:active {
+    background-color: #0760a5;
 }
