--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,20 +1,9 @@
-.title {
-    text-align: center;
-    padding: 56px 80px 56px 80px;
-}
-
-.cards_container {
-    display: flex;
-    gap: 32px;
-    justify-content: center;
-}
-
 .preview_section {
     display: flex;
     flex-direction: column;
     justify-content: center;
 
-    padding: 16px 80px;
+    padding: 0 80px;
     width: 100%;
     height: 500px;
 
@@ -37,36 +26,22 @@
     width: 574px;
 }
 
-.image_text {
-    position: absolute;
-    color: white;
-    z-index: 1;
-    width: 808px;
-    height: 113px;
-    top: 231px;
-    left: 80px;
-    font-size: 96px;
-    font-weight: 500;
-    line-height: 113px;
-    letter-spacing: 0em;
-    text-align: left;
-
-
+.cards_section {
+    display: flex;
+    flex-direction: column;
+    padding: 40px 80px;
 }
 
-.image_subtext {
-    position: absolute;
-    /* Position the text absolutely */
-    color: white;
-    font-size: 32px;
-    z-index: 3;
-    width: 895px;
-    height: 114px;
-    top: 355px;
-    left: 80px;
-    font-weight: 500;
-    line-height: 38px;
-    letter-spacing: 0em;
-    text-align: left;
+.cards_container {
+    display: grid;
+    gap: 16px;
+    grid-template-columns: repeat(auto-fill, 280px);
+    justify-content: center;
+}
 
+.cards_section__title {
+    font-size: 1.5rem;
+    font-weight: 500;
+    align-self: center;
+    margin-bottom: 32px;
 }
