update nextjs version, add PrimaryButton, add authors, add fulter to project hexagons

--- a/src/app/components/ProjectHexagon/ProjectHexagon.module.css
+++ b/src/app/components/ProjectHexagon/ProjectHexagon.module.css
@@ -11,6 +11,10 @@
     height: 224px;
 }
 
+.hexagon_image img {
+    filter: brightness(40%);
+}
+
 .hexagon_text {
     position: absolute;
     top: 50%;
