--- a/src/app/components/UI/Buttons/SecondaryButton/SecondaryButton.module.css
+++ b/src/app/components/UI/Buttons/SecondaryButton/SecondaryButton.module.css
@@ -1,20 +1,22 @@
 .button {
     display: block;
-    background-color: #0D6DB5;
+    background-color: rgba(13, 109, 181, 0.1);
+    border: 2px solid #0D6DB5;
     border-radius: 8px;
     padding: 12px 16px;
     line-height: 20px;
     font-size: 1rem;
     font-weight: 500;
-    color: white;
-    border: none;
+    color: #0D6DB5;
     cursor: pointer;
 }
 
 .button:hover {
-    background-color: #2487d3;
+    background-color: rgba(13, 109, 181, 0.2);
+    border-color: #0c61a1;
 }
 
 .button:active {
-    background-color: #0760a5;
+    background-color: rgba(13, 109, 181, 0.25);
+    border-color: #0a5996;
 }
