--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -42,9 +42,14 @@
     background-color: white;
 }
 
+.form_title {
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
 
 .page {
-    background-image: url("../../static/images/img.jpg");
+    background-image: url("/images/preview.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -58,6 +63,10 @@
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+.page::after {
+    filter: brightness(30%);
 }
 
 .button {
