--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -1,42 +1,25 @@
-.form {
-    width: 100%;
+.login_section {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/images/home_preview.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    height: 100vh;
+
     display: flex;
-    flex-direction: column;
-    gap: 32px;
-    align-content: center;
-}
-
-.input_container {
-    display: flex;
-    flex-direction: column;
-}
-
-.label {
-    margin-bottom: 8px;
-    font-weight: bold;
-}
-
-.input {
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-}
-
-.input:focus {
-    outline: none;
-    border-color: #0D6DB5;
-    box-shadow: 0 0 6px 0 #0D6DB540;
+    align-items: center;
+    justify-content: center;
 }
 
 .form_container {
-    padding: 32px;
-    gap: 32px;
+    padding: 24px;
     width: 400px;
+
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
     box-shadow: 0 0 6px 0 #00000040;
     border-radius: 12px;
     background-color: white;
@@ -45,39 +28,48 @@
 .form_title {
     font-size: 2.5rem;
     font-weight: 500;
+    margin-bottom: 32px;
 }
 
-
-.page {
-    background-image: url("/images/preview.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+.form {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    flex-direction: column;
+    width: 100%;
 }
 
-.page::after {
-    filter: brightness(30%);
+.form_inputs_container {
+    margin-bottom: 32px;
 }
 
-.button {
-    background-color: #0D6DB5;
-    border: none;
-    color: white;
-    padding: 16px 24px 16px 24px;
-    border-radius: 8px;
+.form_inputs_container> :not(:last-child) {
+    margin-bottom: 16px;
 }
 
-.error {
+.input_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.label {
+    margin-bottom: 4px;
+    margin-left: 2px;
+    font-weight: 500;
+}
+
+.input {
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+}
+
+.input:focus {
+    outline: none;
+    border-color: #0D6DB5;
+    box-shadow: 0 0 6px 0 #0D6DB540;
+}
+
+.error_message {
     color: red;
     margin-top: 8px;
 }
