--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 500px;
 
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("/images/preview.jpg");
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("/images/home_preview.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
