--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -5,10 +5,38 @@
     background-position: center;
 
     height: 100vh;
-
+    position: relative;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+}
+
+.link_back_container {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    width: fit-content;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 8px;
+}
+
+.back_link {
+    display: flex;
+    flex-direction: row;
+    padding: 8px 12px;
+    align-items: center;
+}
+
+.link_back_container:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.arrow_icon_container {
+    margin-right: 4px;
+}
+
+.link_back__title {
+    font-weight: 500;
 }
 
 .form_container {
@@ -17,6 +45,7 @@
 
     display: flex;
     align-items: center;
+    align-self: center;
     justify-content: center;
     flex-direction: column;
 
@@ -57,16 +86,20 @@
 }
 
 .input {
-    padding: 12px;
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    padding: 12px 16px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 1rem;
+    border-radius: 8px;
+    outline: none;
+    font-size: 0.875rem;
+    color: #2F3644;
 }
 
 .input:focus {
-    outline: none;
     border-color: #0D6DB5;
-    box-shadow: 0 0 6px 0 #0D6DB540;
+    box-shadow: 0px 0px 2px 0px #0D6DB5;
 }
 
 .error_message {
