--- a/src/components/Layouts/Header/Header.module.css
+++ b/src/components/Layouts/Header/Header.module.css
@@ -11,7 +11,7 @@
 }
 
 .header_navigation :not(:last-child) {
-    margin-right: 20px;
+    margin-right: 16px;
 }
 
 .header_navigation :last-child {
@@ -19,11 +19,12 @@
 }
 
 .navigation_link {
-    text-decoration: none;
+    padding: 8px 10px;
+    border-radius: 8px;
     color: black;
     font-size: 1rem;
 }
 
 .navigation_link:hover {
-    text-decoration: underline;
+    background-color: #f5f5f5;
 }
