--- a/src/app/excursions/page.module.css
+++ b/src/app/excursions/page.module.css
@@ -1,9 +1,14 @@
 .preview_container {
     width: 100%;
-    height: 400px;
+    height: 300px;
 
     background-image: url("/images/excursions_preview.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.excursion_3d_container {
+    height: 600px;
+    width: 800px;
 }
