--- a/src/components/Layouts/Header/Header.module.css
+++ b/src/components/Layouts/Header/Header.module.css
@@ -7,7 +7,8 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    padding: 16px 80px
+    padding: 16px 80px;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
 .header_navigation :not(:last-child) {
@@ -26,5 +27,5 @@
 }
 
 .navigation_link:hover {
-    background-color: #f5f5f5;
+    background-color: #efefef;
 }
