change padding in ActualCards, remove sia.by link from header, start adding clients section

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -64,3 +64,9 @@
     max-width: 992px;
     align-self: center;
 }
+
+/* ----------------------- */
+
+.clients_section {
+    padding: 56px 80px;
+}
