--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -68,5 +68,27 @@
 /* ----------------------- */
 
 .clients_section {
+    display: flex;
+    flex-direction: column;
     padding: 56px 80px;
+}
+
+.general_partner_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+    & .general_partner__title {
+        font-size: 1.125rem;
+        font-weight: 500;
+        margin-right: 16px;
+    }
+
+    & .general_partner__image_container {
+        position: relative;
+        height: 80px;
+        width: 156px;
+    }
+
 }
