--- a/src/components/Layouts/Header/Header.module.css
+++ b/src/components/Layouts/Header/Header.module.css
@@ -7,12 +7,18 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    padding: 16px 80px;
+    padding: 8px 80px;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
 .header_navigation :not(:last-child) {
     margin-right: 16px;
+}
+
+.logo_container {
+    position: relative;
+    height: 56px;
+    width: 54px;
 }
 
 .navigation_link {
