--- a/src/components/ExcursionScans/ExcursionScans.module.css
+++ b/src/components/ExcursionScans/ExcursionScans.module.css
@@ -1,6 +1,6 @@
 .excursion_scans_section {
     height: 500px;
-    max-width: 800px;
-    min-width: 500px;
+    width: 100%;
+    min-width: 800px;
     margin: 0 auto;
 }
