--- a/src/app/excursions/page.module.css
+++ b/src/app/excursions/page.module.css
@@ -1,14 +1,117 @@
 .preview_container {
     width: 100%;
-    height: 300px;
+    min-height: 260px;
+    height: 44vh;
 
-    background-image: url("/images/excursions_preview.jpg");
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), url("/images/excursions_preview.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 32px 48px;
 }
 
-.excursion_3d_container {
-    height: 600px;
+.preview_container__title {
+    font-size: 4rem;
+    font-weight: 500;
+    color: white;
+}
+
+.virtual_excursion_container {
+    display: flex;
+    flex-direction: column;
+    padding: 56px 80px;
+}
+
+.virtual_excursion__title {
+    font-size: 1.5rem;
+    font-weight: 500;
+    align-self: center;
+    margin-bottom: 40px;
+}
+
+.local_excursion_container {
+    display: flex;
+    flex-direction: column;
+    background-color: #cce1f0;
+    padding: 56px 80px;
+}
+
+.local_excursion__title {
+    font-size: 1.5rem;
+    font-weight: 500;
+    align-self: center;
+    margin-bottom: 40px;
+}
+
+.local_excursion__form_container {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    margin: 0 auto;
     width: 800px;
+    border-radius: 12px;
+}
+
+.form_container {
+    display: flex;
+    flex-direction: column;
+    padding: 24px 32px;
+    width: 45%;
+}
+
+.form_container > button {
+    align-self: center;
+}
+
+.form_inputs_container {
+    margin-bottom: 32px;
+}
+
+.form_inputs_container> :not(:last-child) {
+    margin-bottom: 16px;
+}
+
+.input_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.label {
+    width: 100%;
+    margin-bottom: 4px;
+    margin-left: 2px;
+    font-size: 0.875rem;
+}
+
+.input {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    padding: 12px 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    outline: none;
+    font-size: 0.875rem;
+    color: #2F3644;
+}
+
+.input:focus {
+    border-color: #0D6DB5;
+    box-shadow: 0px 0px 2px 0px #0D6DB5;
+}
+
+.form_container__illustration_container {
+    position: relative;
+    height: auto;
+    width: 55%;
+}
+
+.form_container__illustration_container > img {
+    object-fit: cover;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
 }
