--- a/src/components/ActualCard/ActualCard.module.css
+++ b/src/components/ActualCard/ActualCard.module.css
@@ -22,6 +22,6 @@
     color: #444444;
     font-size: 1rem;
     font-weight: 500;
-    padding: 12px 0;
+    padding: 16px 12px;
     text-align: center;
 }
